--- a/expressworks/package.json
+++ b/expressworks/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "crypto": "0.0.3",
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "path": "^0.12.7",
