--- a/how-to-npm/.npmrc
+++ b/how-to-npm/.npmrc
@@ -1,2 +1,2 @@
 registry = http://localhost:15443/
-userconfig = /Users/lauriereynolds/.config/how-to-npm/npmrc
+userconfig = /home/laurie/.config/how-to-npm/npmrc
