--- a/learnyoureact/package.json
+++ b/learnyoureact/package.json
@@ -10,9 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^5.8.23",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
     "body-parser": "^1.15.0",
+    "browserify": "^13.0.0",
     "express": "^4.13.4",
     "express-react-views": "^0.9.0",
+    "install": "^0.6.1",
+    "npm": "^3.8.6",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   }
