--- a/thinking-in-react/package.json
+++ b/thinking-in-react/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "react": "^0.14.0-rc1",
     "react-dom": "^0.14.0-rc1"
+  },
+  "devDependencies": {
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8"
   }
 }
